# AI_Voice

./: .gitignore  audio.py  docker-compose.yml  lamma_in_action.py  main.py  pyproject.toml
DNS-Server/: _modified_server_config.json  dev.py  dns_server.py  docker-compose.yml  main.py  pyproject.toml
DNS-Server/Doc/: technitium_api_complete_reference.md  technitium_api_detailed.csv  technitium_api_quickstart.md  technitium_api_summary.md
module/: audio.py  audio_capture.py
