[project]
name = "env-updater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "genai>=2.1.0",
    "google>=3.0.0",
    "google-cloud-speech>=2.35.0",
    "google-genai>=1.56.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "speechrecognition>=3.14.4",
]
