[project]
name = "env-updater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.1",
    "genai>=2.1.0",
    "google>=3.0.0",
    "google-cloud-speech>=2.35.0",
    "google-genai>=1.56.0",
    "instructor>=0.2.7",
    "librosa>=0.11.0",
    "ollama>=0.6.1",
    "openai>=0.27.10",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.4",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
]
